--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,91 +56,31 @@ jobs:
   #         prefix: github.com/ChainSafe/gossamer
   #         debug: true
 
-  docker-stable-tests:
+  stable-tests:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: false
-      -
         name: Run stable tests
         run: |
-          docker run ${{ steps.buildx.outputs.name }} sh -c "make it-stable"
+          make it-stable
   docker-rpc-tests:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: false
-          build-args: |
-            docker run sh -c "make it-rpc"
-      # -
-      #   name: Run rpc tests
-      #   run: |
-      #     docker run chainsafe/gossamer:latest sh -c "make it-rpc"
-  docker-stress-tests:
+        name: Run rpc tests
+        run: |
+          make it-rpc
+  stress-tests:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: false
-          # tags: chainsafe/gossamer:latest
-      -
         name: Run stress
         run: |
-          docker run sh -c "make it-stress"
-  docker-grandpa-tests:
+          make it-stress
+  grandpa-tests:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: false
-          # tags: chainsafe/gossamer:latest
-      -
         name: Run stress
         run: |
-          docker run sh -c "make it-grandpa"
+          make it-grandpa
