--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,31 +56,46 @@ jobs:
   #         prefix: github.com/ChainSafe/gossamer
   #         debug: true
 
-  stable-tests:
+  docker-stable-tests:
     runs-on: ubuntu-latest
     steps:
       -
         name: Run stable tests
         run: |
-          make it-stable
+          sh -c "make it-stable"
   docker-rpc-tests:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: dutterbutter/gossamer:test
+      -
         name: Run rpc tests
         run: |
-          make it-rpc
-  stress-tests:
+          docker run dutterbutter/gossamer:test sh -c "make it-rpc"
+  docker-stress-tests:
     runs-on: ubuntu-latest
     steps:
       -
         name: Run stress
         run: |
-          make it-stress
-  grandpa-tests:
+          sh -c "make it-stress"
+  docker-grandpa-tests:
     runs-on: ubuntu-latest
     steps:
       -
         name: Run stress
         run: |
-          make it-grandpa
+          sh -c "make it-grandpa"
