--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -76,13 +76,15 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          load: true
           file: ./Dockerfile
           platforms: linux/amd64
           push: false
+          tags: dutterbutter/gossamer:test
       -
         name: Run rpc tests
         run: |
-          docker run ${{ jobs.docker_build.container.image }} sh -c "make it-rpc"
+          docker run dutterbutter/gossamer:test sh -c "make it-rpc"
   docker-stress-tests:
     runs-on: ubuntu-latest
     steps:
