--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Generate coverage report
         run: |
-          go test -short -race -coverprofile=coverage.out -covermode=atomic
+          go test ./... -short -race -coverprofile=coverage.out -covermode=atomic
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v1.0.2
