--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,7 +73,7 @@ jobs:
           curl https://deepsource.io/cli | sh
 
           # From the root directory, run the report coverage command
-          ./bin/deepsource report --analyzer test-coverage --key go --value-file ./cover.out
+          ./bin/deepsource report --analyzer test-coverage --key go --value-file ./coverage.out
 
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
