--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -17,12 +17,20 @@ exclude_patterns = [
 name = "go"
 enabled = true
 
-  [analyzers.meta]
-  import_paths = ["github.com/dutterbutter/gossamer"]
+[analyzers.meta]
+import_paths = ["github.com/dutterbutter/gossamer"]
 
 [[analyzers]]
 name = "javascript"
 enabled = true
 
-  [analyzers.meta]
-  environment = ["mocha"]
+[analyzers.meta]
+environment = ["mocha"]
+
+[[analyzers]]
+name = "test-coverage"
+enabled = true
+
+[[analyzers]]
+name = "secrets"
+enabled = true
