--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,6 +4,19 @@ env:
   GO111MODULE: on
 
 jobs:
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run go fmt
+        run: diff -u <(echo -n) <(gofmt -d -s .)
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: 'latest'
+          args: --config ./golangci.yml
+
   linter-check:
     runs-on: ubuntu-latest
     steps:
