--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,33 +4,10 @@ env:
   GO111MODULE: on
 
 jobs:
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run go fmt
-        run: diff -u <(echo -n) <(gofmt -d -s .)
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: 'latest'
-          args: --config ./golangci.yml
-
   linter-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v1
-        with:
-          go-version: '1.15.x'
       - uses: actions/checkout@v2
-
-      - name: Cache go modules
-        uses: actions/cache@v1
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
 
       - name: Run go fmt
         run: diff -u <(echo -n) <(gofmt -d -s .)
@@ -38,9 +15,9 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
+          working-directory: "GOPATH=~/go/github.com/dutterbutter/gossamer"
           version: 'latest'
           args: --config ./golangci.yml
-
 #   vet-check:
 #     runs-on: ubuntu-latest
 #     steps:
