--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,9 +15,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          working-directory: ".~/go/github.com/dutterbutter/gossamer"
           version: 'latest'
-          args: --config ./golangci.yml
+          args: --config .~/go/github.com/dutterbutter/gossamer/golangci.yml
 #   vet-check:
 #     runs-on: ubuntu-latest
 #     steps:
