--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,11 +82,11 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: false
-          tags: chainsafe/gossamer:test
+          tags: dutterbutter/gossamer:test
       -
         name: Run stable tests
         run: |
-          docker run chainsafe/gossamer:test sh -c "make it-stable"
+          docker run dutterbutter/gossamer:test sh -c "make it-stable"
   docker-rpc-tests:
     runs-on: ubuntu-latest
     steps:
@@ -105,25 +105,79 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: false
-          tags: chainsafe/gossamer:test
+          tags: dutterbutter/gossamer:test
       -
         name: Run rpc tests
         run: |
-          go test ./... -short -coverprofile=coverage.out -covermode=atomic -timeout=20m
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v1.0.2
-        with:
-          file: ./coverage.out
-          flags: unittests
-          name: coverage
-
-  publish-code-coverage2:
+          docker run dutterbutter/gossamer:test sh -c "make it-rpc"
+  docker-stress-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - name: Report results to DeepSource
+          load: true
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: dutterbutter/gossamer:test
+      -
+        name: Run stress
         run: |
-          docker run chainsafe/gossamer:test sh -c "make it-grandpa"
+          docker run dutterbutter/gossamer:test sh -c "make it-stress"
+  docker-grandpa-tests:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          load: true
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: dutterbutter/gossamer:test
+      -
+        name: Run grandpa
+        run: |
+          docker run dutterbutter/gossamer:test sh -c "make it-grandpa"
+  
+  docker-polkadotjs-tests:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          load: true
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: dutterbutter/gossamer:test
+      -
+        name: Run polkadotjs tests
+        run: |
+          cd tests/polkadotjs_test && yarn
+          docker run dutterbutter/gossamer:test sh -c "make it-polkadotjs"
