--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -181,5 +181,5 @@ jobs:
       -
         name: Run polkadotjs tests
         run: |
-          cd tests/polkadotjs_test && yarn
+          cd tests/polkadotjs_test && yarn && sudo npm i -g npx
           docker run dutterbutter/gossamer:test sh -c "make it-polkadotjs"
