--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -181,5 +181,6 @@ jobs:
       -
         name: Run polkadotjs tests
         run: |
-          cd tests/polkadotjs_test && yarn && sudo npm i -g npx
+          echo $PWD
+          cd ./tests/polkadotjs_test && yarn && sudo npm i -g npx
           docker run dutterbutter/gossamer:test sh -c "make it-polkadotjs"
