--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,17 +11,30 @@ jobs:
         platform: [macos-latest, ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/setup-go@v1
+      - id: go-cache-paths
+        run: |
+          echo "::set-output name=go-build::$(go env GOCACHE)"
+          echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+      - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
       - uses: actions/checkout@v2
 
+          # cache go build cache
       - name: Cache go modules
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
+          path: ${{ steps.go-cache-paths.outputs.go-build }}
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ runner.os }}-go-build
+
+      # cache go mod cache
+      - name: Cache go modules
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.go-cache-paths.outputs.go-mod }}
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ runner.os }}-go-mod
 
       - name: Install Subkey
         run: |
@@ -42,17 +55,30 @@ jobs:
   publish-code-coverage:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/setup-go@v1
+        - id: go-cache-paths
+          run: |
+            echo "::set-output name=go-build::$(go env GOCACHE)"
+            echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+        - uses: actions/setup-go@v2
           with:
             go-version: ${{ matrix.go-version }}
         - uses: actions/checkout@v2
 
+          # cache go build cache
         - name: Cache go modules
-          uses: actions/cache@v1
+          uses: actions/cache@v2
           with:
-            path: ~/go/pkg/mod
-            key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-            restore-keys: ${{ runner.os }}-go-
+            path: ${{ steps.go-cache-paths.outputs.go-build }}
+            key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+            restore-keys: ${{ runner.os }}-go-build
+
+        # cache go mod cache
+        - name: Cache go modules
+          uses: actions/cache@v2
+          with:
+            path: ${{ steps.go-cache-paths.outputs.go-mod }}
+            key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+            restore-keys: ${{ runner.os }}-go-mod
 
         - name: Generate coverage report
           run: |
@@ -63,8 +89,6 @@ jobs:
             flags: unit-tests
             name: coverage
             verbose: true
-            if_ci_failed: success
-            informational: false
 
   docker-stable-tests:
     runs-on: ubuntu-latest
