--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,13 @@ jobs:
       - id: go-cache-paths
         run: |
           echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
       - uses: actions/checkout@v2
-        # cache go build cache
+    
+      # cache go build cache
       - name: Cache go modules
         uses: actions/cache@v2
         with:
@@ -45,12 +46,12 @@ jobs:
       - id: go-cache-paths
         run: |
           echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
       - uses: actions/checkout@v2
-        # cache go build cache
+      # cache go build cache
       - name: Cache go modules
         uses: actions/cache@v2
         with:
@@ -95,6 +96,6 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: chainsafe/gossamer:latest
+          tags: dutterbutter/gossamer:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
