--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,13 +14,13 @@ jobs:
       - id: go-cache-paths
         run: |
           echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
       - uses: actions/checkout@v2
 
-          # cache go build cache
+      # cache go build cache
       - name: Cache go modules
         uses: actions/cache@v2
         with:
@@ -58,13 +58,13 @@ jobs:
         - id: go-cache-paths
           run: |
             echo "::set-output name=go-build::$(go env GOCACHE)"
-            echo "::set-ouput name=go-mod::$(go env GOMODCACHE)"
+            echo "::set-output name=go-mod::$(go env GOMODCACHE)"
         - uses: actions/setup-go@v2
           with:
             go-version: ${{ matrix.go-version }}
         - uses: actions/checkout@v2
 
-          # cache go build cache
+        # cache go build cache
         - name: Cache go modules
           uses: actions/cache@v2
           with:
