--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -84,7 +84,9 @@ jobs:
           run: |
             go test ./... -short -coverprofile=coverage.out -covermode=atomic -timeout=20m
         - uses: codecov/codecov-action@v1
-          with:      
+          with:    
+            if_ci_failed: success
+            informational: true   
             files: ./coverage.out
             flags: unit-tests
             name: coverage
